// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "ecdsa_builtin_applications": 1,
    "memory_holes": 1450,
    "pedersen_builtin_applications": 38,
    "range_check_builtin_applications": 456,
    "steps": 16919,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "ecdsa_builtin_applications": 1,
    "memory_holes": 1450,
    "pedersen_builtin_applications": 38,
    "range_check_builtin_applications": 456,
    "steps": 16912,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;
